--- a/css/page.css
+++ b/css/page.css
@@ -27,28 +27,28 @@ a:hover {
     color: #3d93b8;
 }
 
-h1 {
+.container h1 {
     font-size: 40px;
     font-weight: 100;
     color: #555;
     font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
 }
 
-h2 {
+.container h2 {
     font-size: 20px;
     font-weight: 700;
     color: #555;
     font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
 }
 
-h3 {
+.container h3 {
     font-size: 30px;
     font-weight: 500;
     color: #555;
     font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
 }
 
-p, ul li {
+.container p, ul li {
     font-size: 14px;
     color: #555;
     font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif!important;
