--- a/css/navbar.css
+++ b/css/navbar.css
@@ -8,7 +8,7 @@ nav #navbar-logo {
     margin: 10px 0 0 30px;
 }
 
-nav ul {
+nav #nav ul {
     font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
     list-style: none;
     font-weight: 700;
@@ -16,7 +16,7 @@ nav ul {
     margin: -40px 50px 0 0;
 }
 
-nav ul li {
+nav #nav ul li {
     display: inline;
 }
 
