--- a/css/page.css
+++ b/css/page.css
@@ -48,7 +48,7 @@ a:hover {
     font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
 }
 
-p, ul li[id=license-list] {
+p, ul li.license-list {
     font-size: 14px;
     color: #555;
     font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif!important;
