--- a/css/navbar.css
+++ b/css/navbar.css
@@ -8,14 +8,19 @@ nav #navbar-logo {
     margin: 10px 0 0 30px;
 }
 
-nav ul li {
+nav ul {
     font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
     list-style: none;
     font-weight: 700;
     text-align: right;
     margin: -40px 50px 0 0;
+}
 
+nav ul li {
     display: inline;
+}
+
+nav ul li #nav {
     color: #777;
     -webkit-transition: ease-in-out 0.3s;
 }
