--- a/css/page.css
+++ b/css/page.css
@@ -48,7 +48,7 @@ a:hover {
     font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
 }
 
-p {
+p .license-list {
     font-size: 14px;
     color: #555;
     font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif!important;
@@ -86,11 +86,6 @@ fill: #aaa;
 
 #previous:hover #arrow-previous {
 fill: #333;
-}
-
-ul.posts li {
-    list-style: none;
-    list-style-type: none;
 }
 
 img {
