--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -62,7 +62,7 @@
 </svg>
 </a>
 </div>
-<ul>
+<ul class="nav">
 <li><a id="nav" href="/blog">Blog</a></li>
 <li><a id="nav" href="/about">About</a></li>
 </ul>
