--- a/css/navbar.css
+++ b/css/navbar.css
@@ -8,7 +8,7 @@ nav #navbar-logo {
     margin: 10px 0 0 30px;
 }
 
-nav ul.nav {
+nav ul.nav #nav {
     font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
     list-style: none;
     font-weight: 700;
@@ -16,20 +16,20 @@ nav ul.nav {
     margin: -40px 50px 0 0;
 }
 
-nav ul li #nav {
+nav ul.nav li #nav {
     display: inline;
 }
 
-nav ul li #nav {
+nav ul.nav li #nav {
     color: #777;
     -webkit-transition: ease-in-out 0.3s;
 }
 
-nav ul li #nav:hover {
+nav ul.nav li #nav:hover {
     color: #2082ac;
 }
 
-nav ul li a {
+nav ul.nav li a {
     padding: 30px 20px 30px 20px;
     margin: 0 -2px 0 -2px;
 }
