--- a/css/navbar.css
+++ b/css/navbar.css
@@ -8,7 +8,7 @@ nav #navbar-logo {
     margin: 10px 0 0 30px;
 }
 
-nav ul.nav #nav {
+nav ul.nav {
     font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif;
     list-style: none;
     list-style-type: none;
@@ -17,7 +17,7 @@ nav ul.nav #nav {
     margin: -40px 50px 0 0;
 }
 
-nav ul.nav li #nav {
+nav ul.nav li.nav {
     display: inline;
     list-style: none;
     list-style-type: none;
@@ -25,7 +25,7 @@ nav ul.nav li #nav {
     -webkit-transition: ease-in-out 0.3s;
 }
 
-nav ul.nav li #nav:hover {
+nav ul.nav li.nav:hover {
     color: #2082ac;
 }
 
