--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -63,7 +63,7 @@
 </a>
 </div>
 <ul class="nav">
-<li><a id="nav" href="/blog">Blog</a></li>
-<li><a id="nav" href="/about">About</a></li>
+<li><a class="nav" href="/blog">Blog</a></li>
+<li><a class="nav" href="/about">About</a></li>
 </ul>
 </nav>
