--- a/css/navbar.css
+++ b/css/navbar.css
@@ -23,7 +23,7 @@ nav ul.nav li.nav {
     -webkit-transition: ease-in-out 0.3s;
 }
 
-nav ul.nav li.nav:hover {
+nav ul li.nav:hover {
     color: #2082ac;
 }
 
