--- a/css/navbar.css
+++ b/css/navbar.css
@@ -17,7 +17,7 @@ nav ul.nav {
     margin: -40px 50px 0 0;
 }
 
-nav ul.nav li.nav {
+nav ul li.nav {
     display: inline;
     color: #777;
     -webkit-transition: ease-in-out 0.3s;
