--- a/css/navbar.css
+++ b/css/navbar.css
@@ -16,13 +16,13 @@ nav ul.nav {
     margin: -40px 50px 0 0;
 }
 
-nav ul li.nav {
+nav ul.nav li {
     display: inline;
     color: #777;
     -webkit-transition: ease-in-out 0.3s;
 }
 
-nav ul li.nav:hover {
+nav ul.nav li:hover {
     color: #2082ac;
 }
 
