--- a/css/navbar.css
+++ b/css/navbar.css
@@ -16,13 +16,13 @@ nav ul.nav {
     margin: -40px 50px 0 0;
 }
 
-nav ul.nav li {
+nav ul.nav li a {
     display: inline;
-    color: #777!important;
+    color: #777;
     -webkit-transition: ease-in-out 0.3s;
 }
 
-nav ul.nav li:hover {
+nav ul.nav li a:hover {
     color: #2082ac;
 }
 
