--- a/css/navbar.css
+++ b/css/navbar.css
@@ -16,7 +16,7 @@ nav ul.nav {
     margin: -40px 50px 0 0;
 }
 
-nav ul.nav li.nav a.nav {
+nav ul li.nav a.nav {
     display: inline;
     padding: 30px 20px 30px 20px;
     margin: 0 -2px 0 -2px;
@@ -24,6 +24,6 @@ nav ul.nav li.nav a.nav {
     -webkit-transition: ease-in-out 0.3s;
 }
 
-nav ul.nav li.nav a.nav:hover {
+nav ul li.nav a.nav:hover {
     color: #2082ac;
 }
