--- a/css/navbar.css
+++ b/css/navbar.css
@@ -17,7 +17,7 @@ nav ul.nav {
     margin: -40px 50px 0 0;
 }
 
-nav ul li.nav a.nav {
+nav ul.nav li.nav a.nav {
     display: inline;
     list-style-type: none;
     padding: 30px 20px 30px 20px;
@@ -26,6 +26,6 @@ nav ul li.nav a.nav {
     -webkit-transition: ease-in-out 0.3s;
 }
 
-nav ul li.nav a.nav:hover {
+nav ul.nav li.nav a.nav:hover {
     color: #2082ac;
 }
