--- a/css/navbar.css
+++ b/css/navbar.css
@@ -19,6 +19,7 @@ nav ul.nav {
 nav ul.nav li.nav {
     display: inline;
     list-style-type: none;
+    padding-right: 10px;
 }
 
 nav ul.nav li.nav a.nav {
