--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 {% include head.html %}
-<link rel="stylesheet" type="text/css" href="/css/page.css">
+<link rel="stylesheet" type="text/css" href="/css/page.css" media="none" onload="if(media!='all')media='all'">
 {% include analytics.html %}
 <title>{{ page.title }}</title>
 </head>
