--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -3,7 +3,7 @@
 <head>
 <title>{{ page.title }}</title>
 {% include head.html %}
-<link rel="stylesheet" type="text/css" href="/css/landing.css" media="none" onload="if(media!='all')media='all'">
+<noscript><link rel="stylesheet" type="text/css" href="/css/landing.css" media="none" onload="if(media!='all')media='all'"></noscript>
 {% include analytics.html %}
 </head>
 
