--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,500,500i,700,900" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
+<noscript><link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,500,500i,700,900" rel="stylesheet" media="none" onload="if(media!='all')media='all'"></noscript>
 
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png?v=M4ok69EyKJ">
 <link rel="icon" type="image/png" href="/assets/favicons/favicon-32x32.png?v=M4ok69EyKJ" sizes="32x32">
