--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 {% include head.html %}
-<link rel="stylesheet" type="text/css" href="/css/blog.css" media="none" onload="if(media!='all')media='all'">
+<link rel="stylesheet" type="text/css" href="/css/blog.css">
 {% include analytics.html %}
 <title>{{ page.title }}</title>
 </head>
