--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,8 +4,8 @@
 <link rel="stylesheet" type="text/css" href="/css/navbar.css">
 </head>
 
-<nav style="padding: 20px 0 15px 0;">
-<div id="navbar-logo" style="vertical-align: middle; text-align: left; margin: 10px 0 0 30px">
+<nav>
+<div id="navbar-logo">
 <a id="nav" href="/"><svg height="50px" viewBox="-1 0 3950 1000" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <desc>Francis Borja</desc>
     <defs>
@@ -62,8 +62,8 @@
 </svg>
 </a>
 </div>
-<ul class="nav" style="font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif; list-style: none; font-weight: 700; text-align: right; margin: -40px 50px 0 0;">
-<li class="nav" style="display: inline; list-style-type: none; padding-right: 10px;"><a class="nav" href="/blog">Blog</a></li>
-<li class="nav"  style="display: inline; list-style-type: none; padding-right: 10px;"><a class="nav" href="/about">About</a></li>
+<ul class="nav">
+<li class="nav"><a class="nav" href="/blog">Blog</a></li>
+<li class="nav"><a class="nav" href="/about">About</a></li>
 </ul>
 </nav>
