--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -64,6 +64,6 @@
 </div>
 <ul class="nav">
 <li class="nav"><a class="nav" href="/blog">Blog</a></li>
-<li class="nav"><a class="nav" href="/about">About</a></li>
+<li class="nav"><a class="nav" href="/about">About Me</a></li>
 </ul>
 </nav>
