--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="/css/footer.css" media="none" onload="if(media!='all')media='all'">
+<link rel="stylesheet" type="text/css" href="/css/footer.css" media="none" onload="if(media!='all')media='all'"></noscript>
 </head>
 
 <footer>
