--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,11 @@
 
 <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,500,500i,700,900" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
 
+<meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
+
+{% seo %}
+
+
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png?v=M4ok69EyKJ">
 <link rel="icon" type="image/png" href="/assets/favicons/favicon-32x32.png?v=M4ok69EyKJ" sizes="32x32">
 <link rel="icon" type="image/png" href="/assets/favicons/android-chrome-192x192.png?v=M4ok69EyKJ" sizes="192x192">
