--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
 <table id="footer-table" align="center" border-collapse="collapse" table-layout="fixed" width="relative">
   <tr>
     <th oncontextmenu="return false" style="border-right: 40px solid transparent" valign="middle" width="relative"><a oncontextmenu="return false" href="/">
-  <svg width="3950px" height="1000px" viewBox="-1 0 3950 1000" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+  <svg height="28px" viewBox="-1 0 3950 1000" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
       <desc>Francis Borja</desc>
       <defs>
           <rect id="path-1" x="1.3017675" y="0" width="3944.75" height="1000"></rect>
