--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,7 +49,7 @@
 {% else %}
   <meta name="twitter:description" content="{{ page.content | strip_html | xml_escape | truncate: 200 }}">
 {% endif %}
-  <meta name="twitter:image:src" content="{{ site.url }}/assets/cover.jpg">
+  <meta name="twitter:image:src" content="{{ site.url }}/assets/cover.png">
 
 
 {% if page.title %}
@@ -65,4 +65,4 @@
 {% else %}
   <meta name="og:description" content="{{ page.content | strip_html | xml_escape | truncate: 200 }}">
 {% endif %}
-<meta property="og:image" content="{{ site.url }}/assets/cover.jpg">
+<meta property="og:image" content="{{ site.url }}/assets/cover.png">
