--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,8 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+{% include analytics.html %}
+
 <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,500,500i,700,900" rel="stylesheet" media="none" onload="if(media!='all')media='all'">
 
 <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
