--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -4,16 +4,7 @@
 <title>{{ page.title }}</title>
 {% include head.html %}
 <link rel="stylesheet" type="text/css" href="/css/landing.css">
-
-<!-- Google Analytics -->
-<script>
-window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-ga('create', 'UA-84144727-2', 'auto');
-ga('send', 'pageview');
-</script>
-<script async src='https://www.google-analytics.com/analytics.js'></script>
-<!-- End Google Analytics -->
-
+{% include analytics.html %}
 </head>
 
 <body>
