--- a/css/blog.sass
+++ b/css/blog.sass
@@ -2,6 +2,9 @@
 #
 ---
 
+$sans: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif
+$serif: 'Duplicate Ionic', Georgia, serif
+
 body
   font-size: 100% !important
   size: 100% !important
@@ -30,7 +33,7 @@ h1
   font-size: 23px
   font-weight: 700
   color: #555
-  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif
+  font-family: $sans
 
   a
     color: #555
@@ -43,14 +46,14 @@ h2
   font-size: 40px
   font-weight: 100
   color: #555
-  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif
+  font-family: $sans
 
 h3
   font-size: 14px
   color: #999
   font-style: italic
   font-weight: 100
-  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif
+  font-family: $sans
   line-height: 160%
   margin-bottom: 50px
 
@@ -59,7 +62,7 @@ h3
   text-transform: uppercase
   letter-spacing: 0.5
   color: #AAA
-  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif
+  font-family: $sans
   margin-top: -10px
 
 hr
@@ -73,10 +76,10 @@ hr
 p
   font-size: 16px
   color: #555
-  font-family: 'Duplicate Ionic', Georgia, serif
+  font-family: $serif
   font-weight: normal
   line-height: 160%
-  
+
   /*FOR TYPOGRAPHIC SUPPORT
   text-rendering: optimizeLegibility
   font-variant-ligatures: contextual
