--- a/css/blog.sass
+++ b/css/blog.sass
@@ -2,8 +2,7 @@
 #
 ---
 
-$sans: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif
-$serif: 'Duplicate Ionic', Georgia, serif
+@import brand
 
 body
   font-size: 100% !important
