--- a/css/_brand.sass
+++ b/css/_brand.sass
@@ -5,3 +5,18 @@ $serif: 'Duplicate Ionic', Georgia, serif
 
 
 // colors
+$link: #2082ac
+$linkhover: #3d93b8
+
+$darkgrey: #333
+$midgrey: #555
+$lightgrey: #777
+$fadegrey: #999
+
+$bodycolor: $midgrey
+$titlecolor: $midgrey
+$titlecolorhover: $darkgrey
+$accentcolor: $lightgrey
+$detailcolor: $fadegrey
+$introtextcolor: $fadegrey
+$datecolor: $fadegrey
