--- a/css/page.sass
+++ b/css/page.sass
@@ -1,3 +1,7 @@
+---
+#
+---
+
 body
   font-size: 100% !important
   size: 100% !important
@@ -47,7 +51,7 @@ p, ul.license-list li.license-list
   font-family: -apple-system, BlinkMacSystemFont, "Roboto", sans-serif !important
   font-weight: normal
   line-height: 160%
-  
+
   /*FOR TYPOGRAPHIC SUPPORT
   text-rendering: optimizeLegibility
   font-variant-ligatures: contextual
