--- a/css/404.sass
+++ b/css/404.sass
@@ -2,6 +2,8 @@
 #
 ---
 
+@import brand
+
 body
   font-size: 100% !important
   size: 100% !important
@@ -17,26 +19,26 @@ body
 
 a
   text-decoration: none
-  color: #2082ac
+  color: $link
   -webkit-transition: ease-in-out 0.3s
 
   &:hover
     text-decoration: none
-    color: #3d93b8
+    color: $linkhover
 
 h1
   font-size: 50px
   font-weight: 800
-  color: #555
-  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif
+  color: $titlecolor
+  font-family: $sans
   vertical-align: middle
   display: inline-block
 
 h2
   font-size: 30px
   font-weight: 100
-  color: #555
-  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif
+  color: $titlecolor
+  font-family: $sans
   vertical-align: middle
   display: inline-block
   margin-top: -20px
@@ -44,8 +46,8 @@ h2
 h3
   font-size: 14px
   font-weight: normal
-  color: #555
-  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif
+  color: $bodycolor
+  font-family: $sans
   vertical-align: middle
   display: inline-block
   line-height: 150%
