--- a/css/footer.sass
+++ b/css/footer.sass
@@ -2,11 +2,13 @@
 #
 ---
 
+@import brand
+
 footer
   background-color: #fcfcfc
-  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif
+  font-family: $sans
   font-weight: 100 !important
-  color: #555
+  color: $midgrey
   padding-bottom: 15px
   list-style: none
   float: center
@@ -19,11 +21,11 @@ footer
     font-weight: 700
 
     a
-      color: #555 !important
+      color: $midgrey !important
       -webkit-transition: ease-in-out 0.3s
 
       &:hover
-        color: #222 !important
+        color: $darkgrey !important
 
 #footer
   float: center
