--- a/css/_brand.sass
+++ b/css/_brand.sass
@@ -5,8 +5,13 @@ $serif: 'Duplicate Ionic', Georgia, serif
 
 
 // colors
-$link: #2082ac
-$linkhover: #3d93b8
+$basecolor: #2082ac
+$basehover: #3d93b8
+$accentcolor:
+$accenthover:
+
+$link: $basecolor
+$linkhover: $basehover
 
 $darkgrey: #333
 $midgrey: #555
@@ -16,7 +21,4 @@ $fadegrey: #999
 $bodycolor: $midgrey
 $titlecolor: $midgrey
 $titlecolorhover: $darkgrey
-$accentcolor: $lightgrey
 $detailcolor: $fadegrey
-$introtextcolor: $fadegrey
-$datecolor: $fadegrey
