--- a/css/blog.sass
+++ b/css/blog.sass
@@ -49,7 +49,7 @@ h2
 
 h3
   font-size: 14px
-  color: $introtextcolor
+  color: $detailcolor
   font-style: italic
   font-weight: 100
   font-family: $sans
@@ -60,7 +60,7 @@ h3
   font-size: 11px
   text-transform: uppercase
   letter-spacing: 0.5
-  color: $datecolor
+  color: $detailcolor
   font-family: $sans
   margin-top: -10px
 
