--- a/css/landing.sass
+++ b/css/landing.sass
@@ -36,7 +36,7 @@ h1
 h2
   font-size: 30px
   font-weight: 100
-  color: $title
+  color: $titlecolor
   font-family: $sans
   vertical-align: middle
   display: inline-block
