--- a/css/blog.sass
+++ b/css/blog.sass
@@ -95,15 +95,15 @@ p
   fill: $fadegrey
   -webkit-transition: ease-in-out 0.2s
 
-  #next:hover
-    fill: $darkgrey
+#next:hover #arrow-next
+  fill: $darkgrey
 
 #arrow-previous
   fill: $fadegrey
   -webkit-transition: ease-in-out 0.2s
 
-  #previous:hover
-    fill: $darkgrey
+#previous:hover #arrow-previous
+  fill: $darkgrey
 
 img
   max-width: 100%
