--- a/css/blog.sass
+++ b/css/blog.sass
@@ -95,14 +95,14 @@ p
   fill: $fadegrey
   -webkit-transition: ease-in-out 0.2s
 
-#next:hover #arrow-next
+#next:hover, #arrow-next
   fill: $darkgrey
 
 #arrow-previous
   fill: $fadegrey
   -webkit-transition: ease-in-out 0.2s
 
-#previous:hover #arrow-previous
+#previous:hover, #arrow-previous
   fill: $darkgrey
 
 img
