--- a/css/footer.sass
+++ b/css/footer.sass
@@ -13,7 +13,7 @@ footer
   list-style: none
   float: center
   text-align: left
-  margin-top: 150px
+  margin-top: 200px
   border-top: 1px solid #eee
   font-size: 12px
 
@@ -21,7 +21,7 @@ footer
     font-weight: 700
 
     a
-      color: $midgrey !important
+      color: $fadegrey !important
       -webkit-transition: ease-in-out 0.3s
 
       &:hover
