--- a/css/_brand.sass
+++ b/css/_brand.sass
@@ -6,7 +6,7 @@ $serif: 'Duplicate Ionic', Georgia, serif
 
 // colors
 $basecolor: #2082ac
-$basehover: #3d93b8
+$basehover: lighten($basecolor, 10)
 
 $link: $basecolor
 $linkhover: $basehover
@@ -18,5 +18,4 @@ $fadegrey: #999
 
 $bodycolor: $midgrey
 $titlecolor: $midgrey
-$titlecolorhover: $darkgrey
 $detailcolor: $fadegrey
