--- a/css/blog.sass
+++ b/css/blog.sass
@@ -39,7 +39,7 @@ h1
     -webkit-transition: ease-in-out 0.3s
 
     &:hover
-      color: $titlecolorhover
+      color: $lightgrey
 
 h2
   font-size: 40px
@@ -93,14 +93,14 @@ p
 
   #arrow-next
     fill: $fadegrey
-    -webkit-transition: ease-in-out 0.2s
+    -webkit-transition: ease-in-out 0.3s
 
   #next:hover #arrow-next
     fill: $darkgrey
 
   #arrow-previous
     fill: $fadegrey
-    -webkit-transition: ease-in-out 0.2s
+    -webkit-transition: ease-in-out 0.3s
 
   #previous:hover #arrow-previous
     fill: $darkgrey
