--- a/css/navbar.sass
+++ b/css/navbar.sass
@@ -12,6 +12,9 @@ nav
     text-align: left
     margin: 10px 0 0 30px
 
+    svg .base
+      fill: $basecolor
+
   ul.nav
     font-family: $sans
     list-style: none
