--- a/css/landing.sass
+++ b/css/landing.sass
@@ -21,6 +21,7 @@ a
   text-decoration: none
   color: $link
   -webkit-transition: ease-in-out 0.3s
+
   &:hover
     text-decoration: none
     color: $linkhover
@@ -62,7 +63,7 @@ h4
 
 p
   font-size: 40px
-  color: $bodycolor
+  color: $lightgrey
   font-weight: 100
   font-family: $sans
   line-height: 120%
