--- a/css/page.sass
+++ b/css/page.sass
@@ -66,6 +66,14 @@ p, ul.license-list li.license-list
   text-align: center
   margin-top: 150px
 
-img
-  max-width: 100%
-  border-radius: 2px
+.img-container
+  float: left
+  display: block
+  margin-left: -100px
+  padding: 6px 25px 10px 0
+  height: 250px
+  text-align: right
+
+  img
+    height: 100%
+    border-radius: 5px
