--- a/css/page.sass
+++ b/css/page.sass
@@ -71,9 +71,10 @@ p, ul.license-list li.license-list
   display: block
   margin-left: -150px
   padding: 6px 30px 10px 0
-  height: 250px
+  $imgheight: 250px
+  height: $imgheight
   text-align: right
 
   img
-    height: 100%
+    height: $imgheight
     border-radius: 5px
