--- a/css/landing.sass
+++ b/css/landing.sass
@@ -72,3 +72,8 @@ p
 
 img
   max-width: 100%
+
+
+// Preload images
+
+#preload-01 { background: url(/assets/img/me1.jpg) no-repeat -9999px -9999px; }
