--- a/css/footer.sass
+++ b/css/footer.sass
@@ -5,17 +5,24 @@
 @import brand
 
 footer
-  background-color: #fcfcfc
+  background-color: white
   font-family: $sans
   font-weight: 100 !important
   color: $midgrey
   padding-bottom: 15px
   list-style: none
-  float: center
   text-align: left
   margin-top: 200px
   border-top: 1px solid #eee
   font-size: 12px
+
+  margin: auto
+  display: block
+
+  width: 100%
+  bottom: 0
+
+  height: 60px
 
   table tr th
     font-weight: 700
