Fixed pagination arrows

--- a/css/blog.sass
+++ b/css/blog.sass
@@ -101,7 +101,8 @@ p
 
 .pagination
   text-align: center
-  margin-bottom: -50px
+  margin-top: -50px
+  margin-bottom: 100px
 
   #arrow-next
     fill: $fadegrey
