--- a/css/blog.sass
+++ b/css/blog.sass
@@ -101,8 +101,8 @@ p
 
 .pagination
   text-align: center
-  margin-top: -50px
-  margin-bottom: 100px
+  margin-top: -50px !important
+  margin-bottom: 100px !important
 
   #arrow-next
     fill: $fadegrey
