--- a/css/navbar.sass
+++ b/css/navbar.sass
@@ -6,14 +6,14 @@
 
 nav
   padding: 5px 0 35px 0
-  border-bottom: .5px solid #ddd
-  background-color: rgba(255,255,255,.4)
+  border-bottom: .5px solid #dadada
+  background-color: rgba(255,255,255,0.85)
   position: fixed
   width: 100%
   top: 0
   height: 20px
 
-  $filter: blur(20px) saturate(200%)
+  $filter: blur(20px) saturate(250%)
   backdrop-filter: $filter
   -webkit-backdrop-filter: $filter
 
