--- a/css/blog.sass
+++ b/css/blog.sass
@@ -16,17 +16,19 @@ body
   height: 100%
   background-color: $pagecolor
 
+  overflow-x: hidden
+
 .container
   width: 500px
   margin: 0 auto
-  margin-left: 300px
+  margin-left: 15%
   min-height: 100%
-  margin-bottom: -60px
+  margin-bottom: -50px
 
   &::after
     content: ""
     display: block
-    height: 60px
+    height: 50px
 
 .post-container
   margin: 200px 30px 200px 30px
