--- a/css/footer.sass
+++ b/css/footer.sass
@@ -9,7 +9,7 @@ footer
   font-family: $sans
   font-weight: 100 !important
   color: $midgrey
-  padding-bottom: 15px
+  padding-bottom: 8px //supplements #footer margin
   list-style: none
   text-align: left
   margin-top: 200px
@@ -22,7 +22,7 @@ footer
   width: 100%
   bottom: 0
 
-  height: 60px
+  height: 50px
 
   table tr th
     font-weight: 700
@@ -36,7 +36,7 @@ footer
 
 #footer
   float: center
-  margin: 20px 0 10px 0
+  margin: 10px 0 5px 0
 
 table
   border-collapse: collapse
