Update on Profile card

--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -5,7 +5,6 @@
 </head>
 
 <div class="profile">
-<div class="box-padding">
 <img src="/assets/img/profile.jpg" oncontextmenu="return false" />
 <div class="profile-content">
 
@@ -16,4 +15,4 @@
   <p>I'm also on <a href="https://twitter.com/freeingfrancis" target="_blank">Twitter</a> and <a href="https://instagram.com/freeingfrancis" target="_blank">Instagram</a>.</p>
 
 </div>
-</div></div>
+</div>
