--- a/css/profile.sass
+++ b/css/profile.sass
@@ -8,7 +8,7 @@
   border: 1px solid #dadada
   border-radius: 3px
   float: right
-  margin-right: -100%
+  margin-right: -110%
   background-color: white
 
   width: 290px
@@ -17,15 +17,13 @@
 
   box-shadow: 0 0 15px #ececec
 
-  .box-padding
-    padding: 30px
-
   img
     height: auto
     width: auto
-    border-radius: 5px
+    border-radius: 0px
 
   .profile-content
+    padding: 10px 30px 30px 30px
     p
       font-size: 12.5px
       color: $fadegrey
