--- a/css/profile.sass
+++ b/css/profile.sass
@@ -20,11 +20,11 @@
   img
     height: auto
     width: auto
-    border-radius: 0px
+    border-radius: 0 !important
 
   .profile-content
-    padding: 10px 30px 30px 30px
-    
+    padding: 10px 30px 30px 30px !important
+
     p
       font-size: 12.5px
       color: $fadegrey
