--- a/css/profile.sass
+++ b/css/profile.sass
@@ -22,8 +22,8 @@
     width: auto
     border-radius: 0 !important
 
-  .profile-content
-    padding: 10px 30px 30px 30px !important
+  div.profile-content
+    padding: 10px 30px 30px 30px!important
 
     p
       font-size: 12.5px
