--- a/css/blog.sass
+++ b/css/blog.sass
@@ -37,6 +37,7 @@ a
   text-decoration: none
   color: $link
   -webkit-transition: ease-in-out 0.3s
+  transition: ease-in-out 0.3s
 
   &:hover
     text-decoration: none
@@ -51,6 +52,7 @@ h1
   a
     color: $titlecolor
     -webkit-transition: ease-in-out 0.3s
+    transition: ease-in-out 0.3s
 
     &:hover
       color: $lightgrey
@@ -109,6 +111,7 @@ p
   #arrow-next
     fill: $fadegrey
     -webkit-transition: ease-in-out 0.3s
+    transition: ease-in-out 0.3s
 
   #next:hover #arrow-next
     fill: $darkgrey
@@ -116,6 +119,7 @@ p
   #arrow-previous
     fill: $fadegrey
     -webkit-transition: ease-in-out 0.3s
+    transition: ease-in-out 0.3s
 
   #previous:hover #arrow-previous
     fill: $darkgrey
