--- a/css/footer.sass
+++ b/css/footer.sass
@@ -30,6 +30,7 @@ footer
     a
       color: $fadegrey !important
       -webkit-transition: ease-in-out 0.3s
+      transition: ease-in-out 0.3s
 
       &:hover
         color: $darkgrey !important
