--- a/css/landing.sass
+++ b/css/landing.sass
@@ -22,6 +22,7 @@ a
   text-decoration: none
   color: $link
   -webkit-transition: ease-in-out 0.3s
+  transition: ease-in-out 0.3s
 
   &:hover
     text-decoration: none
