--- a/css/navbar.sass
+++ b/css/navbar.sass
@@ -12,10 +12,12 @@ nav
   width: 100%
   top: 0
   height: 20px
+  z-index: 100
 
   $filter: blur(20px) saturate(250%)
   backdrop-filter: $filter
   -webkit-backdrop-filter: $filter
+  transition: $filter
 
   #navbar-logo
     vertical-align: middle
@@ -42,6 +44,7 @@ nav
         margin: 0 -2px 0 -2px
         color: $lightgrey
         -webkit-transition: ease-in-out 0.3s
+        transition: ease-in-out 0.3s
 
         &:hover
           color: $link
