--- a/css/profile.sass
+++ b/css/profile.sass
@@ -15,7 +15,12 @@
   height: relative
   text-align: center
 
-  box-shadow: 0 0 15px #ececec
+  box-shadow: 0 0 15px -5px #bbb
+
+  -webkit-transition: ease-in-out 0.2s
+  transition: ease-in-out 0.2s
+
+  z-index: 0
 
   img
     height: auto
