Update on FontAwesome stylesheet/icons

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,9 +24,9 @@
 
   <p>Despite a strong indication of introversion, I am quite (selectively) social:</p>
 
-  <p><a href="https://twitter.com/{{ site.twitter_username }}" target="_blank"><i class="fa fa-twitter"></i>  @freeingfrancis</a></p>
+  <p><a href="https://twitter.com/{{ site.twitter_username }}" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>  @freeingfrancis</a></p>
 
-  <p><a href="https://instagram.com/{{ site.instagram_username }}" target="_blank"><i class="fa fa-instagram"></i>  @freeingfrancis</a></p>
+  <p><a href="https://instagram.com/{{ site.instagram_username }}" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i>  @freeingfrancis</a></p>
 
 </div>
 </div>
