Update on sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
 
   <p>Hello. My name is Francis. I&nbsp;am a writer, designer and environmentalist. Welcome to my blog. I hope you become friends with the voices in my head.</p>
 
-  <p>Read an excessively abbreviated profile <a href="/about">about me</a> (that's more out of context than a helpful autobiography) and maybe the voices won't seem too much like radio static.</p>
+  <p>Read an excessively abbreviated profile <a href="/about">about me</a> (that's more out-of-context than a helpful autobiography) and maybe the voices won't seem too much like radio static.</p>
 
 </div>
 </div>
@@ -24,9 +24,9 @@
 
   <p>Despite a strong indication of introversion, I am quite (selectively) social:</p>
 
-  <p><a href="https://twitter.com/{{ site.twitter_username }}" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>  @freeingfrancis</a></p>
+  <p><a href="https://twitter.com/freeingfrancis" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>&emsp;@freeingfrancis</a></p>
 
-  <p><a href="https://instagram.com/{{ site.instagram_username }}" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i>  @freeingfrancis</a></p>
+  <p><a href="https://instagram.com/freeingfrancis" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i>&emsp;@freeingfrancis</a></p>
 
 </div>
 </div>
