--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
 <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/29fed3c443.css">
 
 
 <script type="text/javascript">
