Fixed responsiveness of sidebar and blog.html

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,6 +4,8 @@
 <link rel="stylesheet" type="text/css" href="/css/sidebar.css">
 </head>
 
+<div class="sidebar">
+
 <div class="card1">
 <img src="/assets/img/profile.jpg" oncontextmenu="return false" />
 <div class="profile-content">
@@ -29,4 +31,6 @@
   <p><a href="https://instagram.com/freeingfrancis" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i>&emsp;@freeingfrancis</a></p>
 
 </div>
+</div>
+
 </div>
