Update: Removed footer, transferred to sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,27 +10,36 @@
 <img src="/assets/img/profile.jpg" oncontextmenu="return false" />
 <div class="profile-content">
 
-  <p>Hello. My name is Francis. I&nbsp;am a writer, designer and environmentalist. Welcome to my blog. I hope you become friends with the voices in my head.</p>
+  <p>Hello. My name is Francis. I&nbsp;am a writer, designer and environmentalist. Welcome to my blog. I hope you become friends with the voices in my head. <a href="/about" style="font-size: 10px; text-transform: uppercase">Read more about me&nbsp;&rsaquo;</a></p>
 
-  <p>Read an excessively abbreviated profile <a href="/about">about me</a> (that's more out-of-context than a helpful autobiography) and maybe the voices won't seem too much like radio static.</p>
+  <p>Despite a strong indication of introversion, I am quite social:</p>
+
+  <p><a href="https://twitter.com/freeingfrancis" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>&emsp;@freeingfrancis</a>
+
+<br />
+
+  <a href="https://instagram.com/freeingfrancis" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i>&emsp;&#8202;&#8202;@freeingfrancis</a></p>
 
 </div>
 </div>
+
+
 
 
 <div class="card2">
 
-<div class="card-head">Social Media</div>
+  <img src="/assets/logomark-bw.svg" /><br /><br />
+  CC 4.0 FRANCIS BORJA<br />
+  Some Rights Reserved
 
 <div class="profile-content">
 
-  <p>Despite a strong indication of introversion, I am quite (selectively) social:</p>
-
-  <p><a href="https://twitter.com/freeingfrancis" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>&emsp;@freeingfrancis</a></p>
-
-  <p><a href="https://instagram.com/freeingfrancis" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i>&emsp;@freeingfrancis</a></p>
+  <a href="/license">License</a> <span style="color: #aaa; font-style: bold">&#183;</span> <a href="mailto:mail@francisborja.com">Contact</a>
 
 </div>
 </div>
+
+
+
 
 </div>
