--- a/css/footer.sass
+++ b/css/footer.sass
@@ -9,7 +9,6 @@ footer
   font-family: $sans
   font-weight: 100 !important
   color: $midgrey
-  padding-bottom: 8px //supplements #footer margin
   list-style: none
   text-align: left
   margin-top: 200px
@@ -23,6 +22,7 @@ footer
   bottom: 0
 
   height: 50px
+  padding-top: 12px
 
   table tr th
     font-weight: 700
@@ -36,8 +36,8 @@ footer
         color: $darkgrey !important
 
 #footer
-  float: center
-  margin: 10px 0 5px 0
+  margin: auto
+  text-align: center
 
 table
   border-collapse: collapse
