--- a/css/page.sass
+++ b/css/page.sass
@@ -20,15 +20,10 @@ body
   width: 500px
   margin: 0 auto
   min-height: 100%
-  margin-bottom: -50px
-
-  &::after
-    content: ""
-    display: block
-    height: 50px
+  padding-bottom: 5px
 
 .post-container
-  margin: 200px 30px 200px 30px
+  margin: 200px 30px 20px 30px
 
 a
   text-decoration: none
@@ -91,3 +86,22 @@ p, ul.license-list li.license-list
     height: $imgheight
     border-radius: 5px
     background-color: $fadegrey
+
+hr
+  border: 0
+  height: 0
+  border-top: 1px solid #ddd
+  margin: 60px 0 20px 0
+
+div.profile-content
+  font-family: $sans
+  font-weight: 700
+  font-size: 12px
+  word-spacing: 5px
+  text-align: center
+
+  a
+    color: #aaa
+
+    &:hover
+      color: $midgrey
