--- a/css/sidebar.sass
+++ b/css/sidebar.sass
@@ -11,7 +11,8 @@
   width: relative
   margin-right: 15%
   margin-left: 50px
-  margin-bottom: 50px
+  padding-bottom: 50px
+  z-index: 0
 
   .card1
     border: 0.5px solid #ddd
@@ -21,8 +22,6 @@
     width: 290px
     height: relative
     text-align: center
-
-    z-index: 0
     overflow: hidden
 
     img
@@ -48,20 +47,21 @@
   //------------------------------
 
   .card2
-    @extend .card1
-    margin-top: 30px  //distance between top card
+    margin-top: 30px
+    text-align: center
 
-    .card-head
-      $valign: 35px
-      height: $valign
-      line-height: $valign
-      width: 100%
-      background-color: #eee
-      font-size: 11px
-      color: $fadegrey
-      font-family: $sans
-      font-weight: 500
-      text-align: center
-      vertical-align: middle
-      margin: auto
-      text-transform: uppercase
+    font-family: $sans
+    font-weight: 500
+    font-size: 11px
+    color: #aaa
+    line-height: 150%
+
+    div.profile-content
+      word-spacing: 2px
+      font-weight: 700
+
+      a
+        color: #aaa
+
+        &:hover
+          color: $midgrey
