Protected logo from right click

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,7 +28,7 @@
 
 <div class="card2">
 
-  <img src="/assets/logomark-bw.svg" /><br /><br />
+  <img src="/assets/logomark-bw.svg" oncontextmenu="return false" /><br /><br />
   CC 4.0 FRANCIS BORJA<br />
   Some Rights Reserved
 
