--- a/css/landing.sass
+++ b/css/landing.sass
@@ -5,18 +5,25 @@
 @import brand
 
 body
-  font-size: 100% !important
+  background-image: url(/assets/city.jpg)
+  background-repeat: no-repeat
+  background-position: center center
+  background-size: cover
+  background-attachment: fixed
+  background-color: $midgrey
+
+  height: 100%
+  max-height: 100%
+
   size: 100% !important
   width: 100% !important
   padding: 0
   margin: 0
-  background-color: $pagecolor
 
 .container
-  float: center
   margin: auto
-  width: 550px
-  padding: 200px 0 200px 0
+  width: relative
+  padding: 300px 50px 200px 50px
 
 a
   text-decoration: none
@@ -64,13 +71,13 @@ h4
   margin: 50px 0 10px 0
 
 p
-  font-size: 40px
-  color: $lightgrey
-  font-weight: 100
+  font-size: 35px
+  color: white
+  font-weight: 500
   font-family: $sans
   line-height: 120%
-  vertical-align: middle
-  display: inline-block
+  display: block
+  text-align: center
 
 img
   max-width: 100%
