--- a/css/landing.sass
+++ b/css/landing.sass
@@ -22,8 +22,8 @@ body
 
   .container
     margin: auto
-    width: relative
-    padding: 300px 50px 200px 50px
+    width: 600px!important
+    padding: 250px 50px 200px 50px
 
 a
   text-decoration: none
