--- a/css/landing.sass
+++ b/css/landing.sass
@@ -5,7 +5,7 @@
 @import brand
 
 body
-  background-image: url('/assets/city.jpg')
+  background-image: url(/assets/city.jpg)
   background-repeat: no-repeat
   background-position: center center
   background-size: cover
