--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
 
   <p>Hello. My name is Francis. I&nbsp;am a writer, designer and environmentalist. Welcome to my blog. I hope you become friends with the voices in my head. <a href="/about" style="font-size: 10px; text-transform: uppercase">Read more about me&nbsp;&rsaquo;</a></p>
 
-  <p>Despite a strong indication of introversion, I am quite social:</p>
+  <p>Despite a strong indication of introversion, I am quite social.</p>
 
   <p><a href="https://twitter.com/freeingfrancis" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i>&emsp;@freeingfrancis</a>
 
