--- a/css/landing.sass
+++ b/css/landing.sass
@@ -28,7 +28,7 @@ body
     font-size: 38px
     color: white
     font-weight: 500
-    font-family: $serif
+    font-family: $sans
     line-height: 120%
     display: block
     text-align: center
