--- a/css/landing.sass
+++ b/css/landing.sass
@@ -5,11 +5,7 @@
 @import brand
 
 body
-  background-image: url(/assets/city.jpg)
-  background-repeat: no-repeat
-  background-position: center center
-  background-size: cover
-  background-attachment: fixed
+  background-color: $basecolor
 
   height: 100%
   max-height: 100%
@@ -27,7 +23,7 @@ body
   p
     font-size: 38px
     color: white
-    font-weight: 500
+    font-weight: 100
     font-family: $sans
     line-height: 120%
     display: block
