Testing fix for landing page

--- a/css/home.sass
+++ b/css/home.sass
@@ -5,6 +5,11 @@
 @import brand
 
 body
+  background-image: url(/assets/city.jpg)
+  background-repeat: no-repeat
+  background-position: center center
+  background-size: cover
+  background-attachment: fixed
   background-color: $basecolor
 
   height: 100%
@@ -23,7 +28,7 @@ body
   p
     font-size: 38px
     color: white
-    font-weight: 100
+    font-weight: 500
     font-family: $sans
     line-height: 120%
     display: block
