--- a/css/home.sass
+++ b/css/home.sass
@@ -7,7 +7,7 @@
 body
   background-image: url(/assets/city.jpg)
   background-repeat: no-repeat
-  background-position: center center
+  background-position: center
   background-size: cover
   background-attachment: fixed
   background-color: $basecolor
