Changed filenames from home to landing

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@
 <head>
 <title>{{ page.title }}</title>
 {% include head.html %}
-<link rel="stylesheet" type="text/css" href="/css/home.css">
+<link rel="stylesheet" type="text/css" href="/css/landing.css">
 {% include analytics.html %}
 </head>
 
