Used white background color for landing

--- a/css/homeland.sass
+++ b/css/homeland.sass
@@ -10,7 +10,7 @@ body
   background-position: center
   background-size: cover
   background-attachment: fixed
-  background-color: $basecolor
+  background-color: white
 
   height: 100%
   max-height: 100%
