--- a/css/page.sass
+++ b/css/page.sass
@@ -54,6 +54,24 @@ a
     color: $titlecolor
     font-family: $sans
 
+  h4
+    font-size: 50px
+    font-weight: 800
+    color: $titlecolor
+    font-family: $sans
+    vertical-align: middle
+    display: inline-block
+    margin-bottom: 30px
+
+  h5
+    font-size: 30px
+    font-weight: 100
+    color: $titlecolor
+    font-family: $sans
+    vertical-align: middle
+    display: inline-block
+    margin-top: -20px
+
 p, ul.license-list li.license-list
   font-size: 14px
   color: $bodycolor
