Updated sans font to Source Sans Pro

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
 <img src="/assets/img/profile.jpg" oncontextmenu="return false" />
 <div class="profile-content">
 
-  <p>Hello. My name is Francis. I&nbsp;am a writer, designer and environmentalist. Welcome to my blog. I hope you become friends with the voices in my head. <a href="/about" style="font-size: 10px; text-transform: uppercase">Read more about me&nbsp;&rsaquo;</a></p>
+  <p>Hello. My name is Francis. I&nbsp;am a writer and designer. Welcome to my blog. I hope you become friends with the voices in my head. <a href="/about" style="font-size: 11px; text-transform: uppercase">Read more about me&nbsp;&rsaquo;</a></p>
 
   <p>Despite a strong indication of introversion, I am quite social:</p>
 
