--- a/css/_brand.sass
+++ b/css/_brand.sass
@@ -1,6 +1,6 @@
 // fonts
 
-$sans: -apple-system, BlinkMacSystemFont, 'Roboto', sans-serif
+$sans: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, sans-serif
 $serif: 'Duplicate Ionic', Georgia, serif
 
 
