--- a/css/blog.sass
+++ b/css/blog.sass
@@ -19,7 +19,7 @@ body
   overflow-x: hidden
 
 .container
-  width: 500px
+  width: 550px
   margin: 0 auto
   margin-left: 15%
   min-height: 100%
@@ -64,10 +64,10 @@ h2
   font-family: $sans
 
 h3
-  font-size: 14px
+  font-size: 15px
   color: $detailcolor
   font-style: italic
-  font-weight: 100
+  font-weight: normal
   font-family: $sans
   line-height: 160%
   margin-bottom: 50px
@@ -79,6 +79,7 @@ h3
   color: $detailcolor
   font-family: $sans
   margin-top: -10px
+  letter-spacing: 0.3px
 
 hr
   background-color: #e5e5e5
@@ -92,6 +93,7 @@ p
   font-size: 16px
   color: $bodycolor
   font-family: $serif
+  word-wrap: break-word
   font-weight: normal
   line-height: 160%
 
