Fixed some stuff, including but not limited to center-aligning home

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -65,5 +65,6 @@
 <ul class="nav">
 <li class="nav"><a class="nav" href="/blog">Blog</a></li>
 <li class="nav"><a class="nav" href="/about">About</a></li>
+<li class="nav"><a class="nav" href="mailto:mail@francisborja.com">Contact</a></li>
 </ul>
 </nav>
