--- a/css/navbar.sass
+++ b/css/navbar.sass
@@ -32,7 +32,7 @@ nav
     list-style: none
     font-weight: 700
     text-align: right
-    margin: -30px 50px 0 0
+    margin: -32px 50px 0 0
 
     li.nav
       display: inline
@@ -40,7 +40,7 @@ nav
       padding-right: 10px
 
       a.nav
-        padding: 30px 20px 30px 20px
+        padding: 30px 0 30px 30px
         margin: 0 -2px 0 -2px
         color: $lightgrey
         -webkit-transition: ease-in-out 0.3s
