--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,6 +12,15 @@
 
 <div class="container">
 {{ content }}
+
+
+<div class="profile-content">
+
+  <a href="/license">License</a> <span style="color: #aaa">&#183;</span> <a href="mailto:mail@francisborja.com">Contact</a>
+
+</div>
+
+
 </div>
 
 </body>
