--- a/css/homev1-1-1.sass
+++ b/css/homev1-1-1.sass
@@ -14,6 +14,7 @@ body
 
   height: 100%
   max-height: 100%
+  top: 0
 
   size: 100% !important
   width: 100% !important
@@ -22,17 +23,33 @@ body
 
 .container
   margin: auto
-  width: 600px!important
+  width: 400px!important
   padding: 250px 50px 200px 50px
 
-  p
-    font-size: 38px
+  // vertically align element
+  top: 50%
+  left: 50%
+  position: absolute
+  transform: translate(-50%, -50%)
+
+  h1
+    font-size: 60px
     color: white
-    font-weight: 700
+    font-weight: 900
     font-family: $sans
-    line-height: 150%
     display: block
-    text-align: center
+    text-align: left
+    line-height: 10px
+
+  h2
+    @extend h1
+    font-size: 45px
+    font-weight: 700
+
+  p
+    @extend h1
+    font-size: 30px
+    font-weight: 300
 
 a
   text-decoration: none
