--- a/css/page.sass
+++ b/css/page.sass
@@ -38,7 +38,7 @@ a
 .container
   h1
     font-size: 35px
-    font-weight: 400
+    font-weight: 300
     color: $titlecolor
     font-family: $sans
 
@@ -105,15 +105,13 @@ p, ul.license-list li.license-list
     border-radius: 5px
     background-color: $fadegrey
 
-hr
-  border: 0
-  height: 0
-  border-top: 1px solid #ddd
-  margin: 200px 0 20px 0
-
 div.profile-content
+  border-top: 1px solid #ddd
+  margin-top: 200px
+  padding-top: 20px
+  padding-bottom: 20px
   font-family: $sans
-  font-weight: 700
+  font-weight: 900
   font-size: 12px
   word-spacing: 5px
   text-align: center
@@ -122,4 +120,4 @@ div.profile-content
     color: #aaa
 
     &:hover
-      color: $midgrey
+      color: $link
