--- a/css/sidebar.sass
+++ b/css/sidebar.sass
@@ -28,6 +28,11 @@
       height: auto
       width: auto
       border-radius: 0 !important
+      -webkit-transition: ease-in-out 0.2s
+      transition: ease-in-out 0.2s
+
+      &:hover
+        filter: brightness(110%)
 
     div.profile-content
       padding: 10px 30px 30px 30px !important
@@ -51,17 +56,17 @@
     text-align: center
 
     font-family: $sans
-    font-weight: 500
+    font-weight: 400
     font-size: 11px
     color: #aaa
     line-height: 150%
 
     div.profile-content
-      word-spacing: 2px
-      font-weight: 700
+      word-spacing: 1.5px
+      font-weight: 900
 
       a
         color: #aaa
 
         &:hover
-          color: $midgrey
+          color: $link
