--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,10 @@ layout: blog
 
 
 <!---
+
+<div style="text-align: center; margin-top: 50px"><img style="border-radius:0" src="/assets/logomark-bw-sm.svg" oncontextmenu="return false" /></div>
+
+
 <div class="post-navigation">
   {% if page.previous.url %}
     Older Post
