--- a/css/page.sass
+++ b/css/page.sass
@@ -111,13 +111,15 @@ div.profile-content
   padding-top: 20px
   padding-bottom: 20px
   font-family: $sans
-  font-weight: 900
+  font-weight: 400
   font-size: 12px
-  word-spacing: 5px
   text-align: center
+  color: $fadegrey
+  line-height: 10px
 
   a
-    color: #aaa
+    color: $fadegrey
+    font-weight: 900
 
     &:hover
       color: $link
