--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,7 +16,20 @@
 
 <div class="profile-content">
 
-  <a href="/license">License</a> <span style="color: #aaa">&#183;</span> <a href="mailto:mail@francisborja.com">Contact</a>
+<span style="margin: 3px">CC 4.0 FRANCIS BORJA &emsp; Some Rights Reserved</span>
+
+<br /><br />
+
+<span style="margin: 3px"><a href="/About">About</a></span>
+
+<span style="margin: 3px; color: #aaa; font-style: bold">&#183;</span>
+
+<span style="margin: 3px"><a href="/license">License</a></span>
+
+<span style="margin: 3px; color: #aaa; font-style: bold">&#183;</span>
+
+<span style="margin: 3px"><a href="mailto:mail@francisborja.com">Contact</a></span>
+
 
 </div>
 
