Updated footer for page.html

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,7 +20,7 @@
 
 <br /><br />
 
-<span style="margin: 3px"><a href="/About">About</a></span>
+<span style="margin: 3px"><a href="/about">About</a></span>
 
 <span style="margin: 3px; color: #aaa; font-style: bold">&#183;</span>
 
