--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -34,7 +34,7 @@
 
 <div class="profile-content">
 
-  <a href="/About">About</a> <span style="color: #aaa; font-style: bold">&#183;</span> <a href="/license">License</a> <span style="color: #aaa; font-style: bold">&#183;</span> <a href="mailto:mail@francisborja.com">Contact</a>
+  <a href="/about">About</a> <span style="color: #aaa; font-style: bold">&#183;</span> <a href="/license">License</a> <span style="color: #aaa; font-style: bold">&#183;</span> <a href="mailto:mail@francisborja.com">Contact</a>
 
 </div>
 </div>
