--- a/css/page.sass
+++ b/css/page.sass
@@ -65,7 +65,7 @@ a
 
   h5
     font-size: 25px
-    font-weight: 200
+    font-weight: normal
     color: $titlecolor
     font-family: $sans
     vertical-align: middle
