--- a/css/error.sass
+++ b/css/error.sass
@@ -8,22 +8,24 @@ html
   height: 100%
 
 body
-  font-size: 100% !important
+  height: 100%
+  max-height: 100%
+  top: 0
+
   size: 100% !important
   width: 100% !important
   padding: 0
-  margin: 0 auto
-  height: 100%
-  background-color: $pagecolor
+  margin: 0
 
 .container
-  width: 500px
-  margin: 0 auto
-  min-height: 100%
-  padding-bottom: 5px
+  margin: auto
+  width: 480px!important
 
-.post-container
-  margin: 200px 30px 20px 30px
+  // vertically align element
+  top: 50%
+  left: 50%
+  position: absolute
+  transform: translate(-50%, -50%)
 
 a
   text-decoration: none
@@ -37,22 +39,22 @@ a
 
 .container
   h1
-    font-size: 35px
-    font-weight: 300
-    color: $titlecolor
-    font-family: $sans
-
-  h2
-    font-size: 20px
-    font-weight: 900
-    color: $titlecolor
-    font-family: $sans
-
-  h3
-    font-size: 30px
+    font-size: 40px
     font-weight: 700
     color: $titlecolor
     font-family: $sans
+    vertical-align: middle
+    display: inline-block
+    margin-bottom: 30px
+
+  h2
+    font-size: 22px
+    font-weight: 300
+    color: $titlecolor
+    font-family: $sans
+    vertical-align: middle
+    display: inline-block
+    margin-top: -20px
 
 p, ul.license-list li.license-list
   font-size: 14.25px
