--- a/css/homev1-1-1.sass
+++ b/css/homev1-1-1.sass
@@ -34,7 +34,7 @@ body
   h1
     font-size: 60px
     color: white
-    font-weight: 900
+    font-weight: 700
     font-family: $sans
     display: block
     text-align: left
@@ -44,11 +44,12 @@ body
     @extend h1
     font-size: 45px
     font-weight: 700
+    margin-bottom: 33px
 
   p
     @extend h1
-    font-size: 30px
-    font-weight: 300
+    font-size: 20px
+    font-weight: 700
 
 a
   text-decoration: none
