--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -62,9 +62,12 @@
 </svg>
 </a>
 </div>
+
+<div class="nav-links">
 <ul class="nav">
 <li class="nav"><a class="nav" href="/blog">Blog</a></li>
 <li class="nav"><a class="nav" href="/about">About</a></li>
 <li class="nav"><a class="nav" href="mailto:mail@francisborja.com">Contact</a></li>
 </ul>
+</div>
 </nav>
