--- a/css/navbar.sass
+++ b/css/navbar.sass
@@ -5,13 +5,12 @@
 @import brand
 
 nav
-  padding: 5px 0 35px 0
   border-bottom: .5px solid #dadada
   background-color: rgba(255,255,255,0.85)
   position: fixed
   width: 100%
   top: 0
-  height: 20px
+  height: 60px
   z-index: 100
 
   $filter: blur(20px) saturate(250%)
@@ -20,31 +19,46 @@ nav
   transition: $filter
 
   #navbar-logo
-    vertical-align: middle
-    text-align: left
-    margin: 7px 0 0 50px
+    float: left
+    position: absolute
+    margin: auto
+    margin-left: 50px
+
+    // vertically align element
+    top: 50%
+    position: absolute
+    transform: translateY(-50%)
 
     svg .base
       fill: $basecolor
 
-  ul.nav
-    font-family: $sans
-    list-style: none
-    font-weight: 700
-    text-align: right
-    margin: -32px 50px 0 0
+  .nav-links
+    right: 0
+    padding-right: 50px
+    margin: auto
 
-    li.nav
-      display: inline
-      list-style-type: none
-      padding-right: 10px
+    // vertically align element
+    top: 49%
+    position: absolute
+    transform: translateY(-50%)
 
-      a.nav
-        padding: 30px 0 30px 30px
-        margin: 0 -2px 0 -2px
-        color: $lightgrey
-        -webkit-transition: ease-in-out 0.3s
-        transition: ease-in-out 0.3s
 
-        &:hover
-          color: $link
+    ul
+      font-family: $sans
+      list-style: none
+      font-weight: 700
+      font-size: 16px
+
+      li
+        display: inline
+        list-style-type: none
+
+        a
+          margin-left: 30px
+          vertical-align: middle
+          color: $lightgrey
+          -webkit-transition: ease-in-out 0.3s
+          transition: ease-in-out 0.3s
+
+          &:hover
+            color: $link
