--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 ---
 layout: blog
+comments: true
 ---
 
 <div class="post-container">
@@ -7,7 +8,29 @@ layout: blog
 <p class="date">{{ page.date | date: '%B %Y' }}</p>
 <br>
 <div>{{ content }}</div>
+
+{% if page.comments %}
+<div id="disqus_thread"></div>
+<script>
+var disqus_config = function () {
+this.page.url = {{ site.url }};
+this.page.identifier = {{ site.url }}{{ page.url }};
+};
+
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://francisborja.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+{% endif %}
+
+
 </div>
+
+
 
 <!---
 
