Migrated to Adobe Typekit; fixed typo on homepage

--- a/css/_brand.sass
+++ b/css/_brand.sass
@@ -1,7 +1,7 @@
 // fonts
 
-$sans: 'Lato', -apple-system, BlinkMacSystemFont, sans-serif
-$serif: 'Duplicate Ionic', Georgia, serif
+$sans: "europa", -apple-system, BlinkMacSystemFont, sans-serif
+$serif: "calluna", Georgia, serif
 
 
 // colors
