--- a/css/blog.sass
+++ b/css/blog.sass
@@ -69,13 +69,13 @@ h3
   font-size: 15px
   color: $detailcolor
   font-style: italic
-  font-weight: normal
+  font-weight: 300
   font-family: $sans
   line-height: 150%
   margin-bottom: 50px
 
 .date
-  font-size: 11px
+  font-size: 10.5px
   text-transform: uppercase
   letter-spacing: 0.5
   color: $detailcolor
@@ -92,12 +92,12 @@ hr
   margin-bottom: -1%
 
 p
-  font-size: 16px
+  font-size: 15.5px
   color: $bodycolor
   font-family: $serif
   word-wrap: break-word
-  font-weight: normal
-  line-height: 160%
+  font-weight: 400
+  line-height: 170%
 
   /*FOR TYPOGRAPHIC SUPPORT
   text-rendering: optimizeLegibility
