--- a/_layouts/homev2.html
+++ b/_layouts/homev2.html
@@ -3,7 +3,7 @@
 <head>
 <title>{{ page.title }}</title>
 {% include head.html %}
-<link rel="stylesheet" type="text/css" href="/css/homev1-2.css">
+<link rel="stylesheet" type="text/css" href="/css/homev2.css">
 {% include analytics.html %}
 </head>
 
